# shortcuts

./: README.md  pyproject.toml  sample-config.toml  setup.cfg
.github/workflows/: ci.yml
shortcuts/: __init__.py  __main__.py
