[project]
name = "shortcuts"
version = "0.1.0"
description = "\"Creates arbitrary shell scripts from a configuration file; shortcuts\""
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
keywords = ["scripting"]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = ["click>=7.0", "toml"]
[[project.authors]]
name = "purarue"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
shortcuts = "shortcuts.__main__:cli"

[project.urls]
Homepage = "https://github.com/purarue/shortcuts"

[project.optional-dependencies]
testing = ["flake8", "mypy"]

[tool.mypy]
pretty = "True"
disallow_any_generics = "False"
show_error_context = "True"
show_error_codes = "True"
namespace_packages = "True"
disallow_subclassing_any = "True"
disallow_incomplete_defs = "True"
no_implicit_optional = "True"
warn_redundant_casts = "True"
warn_return_any = "True"
warn_unreachable = "True"

[tool.pytest.ini_options]
addopts = []

[tool.setuptools.packages.find]
include = ["shortcuts"]
exclude = []
