[project]
name = "shortcuts"
version = "0.1.0"
description = "\"Creates arbitrary shell scripts from a configuration file; shortcuts\""
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
keywords = ["scripting"]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = ["click>=7.0", "toml"]
[[project.authors]]
name = "purarue"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
shortcuts = "shortcuts.__main__:cli"

[project.urls]
Homepage = "https://github.com/purarue/shortcuts"

[project.optional-dependencies]
testing = ["flake8", "mypy"]

[tool.mypy]
pretty = true
disallow_any_generics = false
show_error_context = true
show_error_codes = true
namespace_packages = true
disallow_subclassing_any = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true

[tool.pytest.ini_options]
addopts = []

[tool.setuptools.packages.find]
include = ["shortcuts"]
exclude = []
